Correção bugs empate

--- a/jogoDaVelha.html
+++ b/jogoDaVelha.html
@@ -32,7 +32,8 @@
         <div class="text"></div>
     </div>
 
-    <button onclick="iniciarJogo()">Recomeçar</button>
+    <button onclick="escolherQuemComeca('jogador')">Jogador Começa</button>
+    <button onclick="escolherQuemComeca('ia')">IA Começa</button>
 
     <script src="script.js"></script>
 </body>
