--- a/jogoDaVelha.html
+++ b/jogoDaVelha.html
@@ -31,9 +31,11 @@
     <div class="fimDeJogo">
         <div class="text"></div>
     </div>
-
-    <button onclick="escolherQuemComeca('jogador')">Jogador Começa</button>
-    <button onclick="escolherQuemComeca('ia')">IA Começa</button>
+    
+    <div class="buttons">
+        <button onclick="escolherQuemComeca('jogador')" class="playerComeca">Jogador Começa</button>
+        <button onclick="escolherQuemComeca('ia')" class="iaComeca">IA Começa</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
